[package]
name = "relay-mvp-cli"
description = "mvp for Relay-chain Client Node"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "relay-mvp"
[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = "relay-mvp"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"], optional = true }
log = "0.4.17"
thiserror = "1.0.31"
futures = "0.3.21"
pyro = { package = "pyroscope", version = "0.3.1", optional = true }

service = { package = "relay-mvp-service", path = "../service", default-features = false, optional = true }
relay-mvp-runtime = { path = "../../runtime", optional = true }
relay-mvp-client = { path = "../client", optional = true }
polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", optional = true }
polkadot-performance-test = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.37" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.37" }
sc-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.37" }
sc-service = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.37" }
polkadot-node-metrics = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
sc-tracing = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.37" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["db", "cli", "hostperfcheck", "full-node", "westend-native"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"relay-mvp-client",
	"polkadot-node-core-pvf",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
	"polkadot-node-metrics/runtime-benchmarks",
	"polkadot-performance-test?/runtime-benchmarks"
]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro"]
hostperfcheck = ["polkadot-performance-test"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
westend-native = ["service/westend-native"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "polkadot-node-metrics/runtime-metrics"]
