[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.35" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.35" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", package = "sp-beefy" , branch = "polkadot-v0.9.35" }

# mvp Runtime
relay-mvp-runtime = { path = "../../runtime", optional = true }

polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.35" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.35"}
polkadot-node-core-parachains-inherent = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.35"}
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.35"}

[features]
default = ["westend"]
westend = ["relay-mvp-runtime"]
runtime-metrics = [
    "relay-mvp-runtime/runtime-metrics",
]
