
[package]
name = "solo-mvp-node-testing"
description = "Test utilities for solo mvp node"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
fs_extra = "1"
futures = "0.3.21"
log = "0.4.17"
tempfile = "3.1.0"
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
solo-mvp-node-executor = {  path = "../executor" }
solo-mvp-node-primitives = { path = "../primitives" }
solo-mvp-runtime = { path = "../../runtime" }
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-asset-tx-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sc-client-db = { version = "0.10.0-dev", features = ["rocksdb"], git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sc-service = { version = "0.10.0-dev", features = [
	"test-helpers",
	"rocksdb",
], git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
sp-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37"  }
